[package]
name = "pumpbin"
version = "1.1.1"
authors = ["b1n <b1n@b1n.io>"]
edition = "2021"
description = "PumpBin is an Implant Generation Platform."
documentation = "https://pumpbin.b1n.io"
readme = "README.md"
homepage = "https://b1n.io"
repository = "https://github.com/pumpbin/pumpbin"
license = "MIT"
build = "build.rs"

[dependencies]
rfd = "0.14"
dirs = "5.0.1"
open = "5.3"
bincode = { version = "2.0.0-rc.3", default-features = false , features = ["alloc", "derive", "std"]}
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
rand = "0.8"
memchr = "2.7"
capnp = "0.19"
extism = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.0"
iced_aw = { version = "0.11", default-features = false, features = ["menu"] }

iced = { version = "0.13", default-features = false, features = ["wgpu", "tiny-skia", "advanced", "svg", "tokio", "image"] }
regex = "1.10"
clap = { version = "4.5", features = ["derive"] }

[package.metadata.winresource]
LegalCopyright = "Copyright (c) 2024 b1n <b1n@b1n.io>"

[target."cfg(windows)".build-dependencies]
winresource = "0.1.17"

[dev-dependencies]
tempfile = "3.10.1"

[build-dependencies]
capnpc = "0.19"

[profile.release]
strip = true
opt-level = 3
lto = true
codegen-units = 1
